[package]
edition = "2018"
name = "core2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "*", optional = true}
threadpool = {version = "1.0", optional = true}

[features]
default = ["multithread"]
multithread = ["threadpool", "lazy_static"]
